mengubah file index.html dan style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Remake Web Portfolio</title>
+    <title>Web Profile</title>
     
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="reset.css"> -->
@@ -20,7 +20,7 @@
 <body>
     <!-------------- navigation start -------------->
     <nav id="navbar" class="navbar">
-        <h1 class="nav-brand">My Portfolio</h1>
+        <h1 class="nav-brand">My Web Profile</h1>
         <div class="container">
             <ul class="nav-links">
                 <li class="link"><a href="#jumbotron" class="page-scroll">Home</a></li>
@@ -167,18 +167,18 @@
     <div class="whatsapp">
         <a href="https://wa.me/6287802313848" target="_blank"><img src="images/WhatsApp-Logo.png"></a>
     </div>
-    <div class="facebook">
-        <a href="https://www.facebook.com/usamah_attamimi" target="_blank"><img src="images/Facebook-Logo.png"></a>
+    <div class="instagram">
+        <a href="https://www.instagram.com/usamah_attamimi" target="_blank"><img src="images/Instagram-Logo.png"></a>
     </div>
-    <div class="telegram">
-        <a href="https://www.telegram.com/Donosama2" target="_blank"><img src="images/Telegram-Logo.png"></a>
+    <div class="twitter">
+        <a href="https://www.twitter.com/Donosama2" target="_blank"><img src="images/Twitter-Logo.png"></a>
     </div>
     <!-------------- Social Media End -------------->
 
 
     <!-------------- Footer Start -------------->
     <footer class="footer">
-        <p>&copy; copyright 2021 | built by <a href="#">usamah attamimi</a></p>
+        <p>&copy; copyright 2021 | built by <a href="https://github.com/princeattamimi">princeattamimi</a></p>
     </footer>
     <!-------------- Footer End -------------->
 
